<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="editor_expand_selection">Expand selection</string>
  <string name="editor_select_all">Select all</string>
  <string name="editor_copy_text">Copy text</string>
  <string name="editor_paste_text">Paste text</string>
  <string name="editor_format">Format</string>
  <string name="editor_long_select">Long select</string>
  <string name="editor_cut_text">Cut text</string>
  <string name="editor_selected">Selected</string>
  <string name="editor_completion_result_item_icon">completion result item icon</string>
  <string name="editor_no_search_match">No results</string>
  <string name="editor_unable_to_format">Unable to format sequence</string>
  <string name="editor_clip_text_length_too_large">Text is too large to copy</string>
  <string name="editor_conversion_failed">Conversion failed</string>
  <string name="editor_converting_to_title">Converting to %s</string>
  <string name="editor_upper_case">Upper case</string>
  <string name="editor_lower_case">Lower case</string>
  <string name="editor_select_convert_text_first">Please select the text to be converted first</string>
  <string name="editor_applying_changes">Applying changes…</string>
  <plurals name="editor_search_matches">
    <item quantity="one">Match</item>
    <item quantity="other">Matches</item>
  </plurals>
</resources>